Fix: autosuggest not showing

--- a/src/MySubscriptions/react-tagsinput.css
+++ b/src/MySubscriptions/react-tagsinput.css
@@ -1,7 +1,6 @@
 .react-tagsinput {
     background-color: #fff;
     border: 1px solid #ccc;
-    overflow: hidden;
     padding-left: 5px;
     padding-top: 5px;
 }
