--- a/src/Search/Search.css
+++ b/src/Search/Search.css
@@ -1,5 +1,6 @@
 .react-autosuggest__container {
   position: relative;
+  display: inline;
 }
 
 .react-autosuggest__input {
@@ -31,6 +32,20 @@
   position: absolute;
   width: 18.25rem;
   top: 38px;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  z-index: 2;
+}
+
+.react-tagsinput .react-autosuggest__suggestions-container--open {
+  top: 25px;
+  left: -15px;
+  width: 216px;
   border: 1px solid #aaa;
   background-color: #fff;
   font-family: Helvetica, sans-serif;
